--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<!-- 以下方式只是刷新不跳转到其他页面 -->
-
-<meta http-equiv="refresh" content="10">
-
-<!-- 以下方式定时转到其他页面 -->
-
-<meta http-equiv="refresh" content="5;url=https://www.rmtc.org.cn/hjzl/sssj/"> 
-
+<meta http-equiv="refresh" content="0;url=https://www.rmtc.org.cn/hjzl/sssj/"> 
 </head>
-
+<body>
 </body>
 </html>
