--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=https://www.rmtc.org.cn/hjzl/sssj/"> 
+<meta http-equiv="refresh" content="0;url=https://data.rmtc.org.cn/"> 
 </head>
 <body>
 </body>
